<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/content_programmer_edit"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Name -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/name_title"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:id="@+id/name_edit_text_programmer_edit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:hint="@string/name_edit_text_hint_programmer_edit"
                    android:layout_weight="1"/>

                <ToggleButton
                    android:id="@+id/favorite_toggle_button_programmer_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    style="@style/favoriteToggleButton"
                    android:backgroundTint="@color/colorPrimary"
                    android:background="@drawable/favorite_toggle_selector"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Emacs Knowledge -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/emacs_title"/>

            <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:id="@+id/emacs_seek_bar_programmer_edit"/>

            <TextView
                android:id="@+id/emacs_text_view_programmer_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <!-- Caffeine Ingestion -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/caffeine_title"/>

            <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="4"
                android:id="@+id/caffeine_seek_bar_programmer_edit"/>

            <TextView
                android:id="@+id/caffeine_text_view_programmer_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <!-- Real Programmer Rating -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/rpr_title"/>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rpr_rating_bar_programmer_edit"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
